Update tmux conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -5,8 +5,10 @@
 # Always use UTF-8.
 setw -gq utf8 on
 
-# Set the proper default terminal.
-set -g default-terminal "screen-256color"
+# Set the default terminal.
+# This may be necessary for running emacs/vim inside tmux.
+# set -g default-terminal "screen-256color"
+# set -g default-terminal "xterm-256color"
 
 # Use vi key bindings.
 setw -g mode-keys vi
