--- a/tmux.conf
+++ b/tmux.conf
@@ -40,7 +40,7 @@ set-window-option -g window-status-attr dim
 
 # Active window title colors.
 set-window-option -g window-status-current-fg white
-set-window-option -g window-status-current-bg green
+set-window-option -g window-status-current-bg red
 set-window-option -g window-status-current-attr bright
 
 
