Improve flow of shell profile and rc scripts

--- a/tmux.conf
+++ b/tmux.conf
@@ -14,7 +14,7 @@ setw -gq utf8 on
 setw -g mode-keys vi
 
 # Enable mouse mode.
-setw -g mouse on
+# setw -g mouse on
 
 # Set the indexes to start at 1 instead of 0.
 set -g base-index 1
