Improve tmux colors

--- a/tmux.conf
+++ b/tmux.conf
@@ -39,8 +39,8 @@ set-window-option -g window-status-bg black
 set-window-option -g window-status-attr dim
 
 # Active window title colors.
-set-window-option -g window-status-current-fg white
-set-window-option -g window-status-current-bg red
+set-window-option -g window-status-current-fg black
+set-window-option -g window-status-current-bg magenta
 set-window-option -g window-status-current-attr bright
 
 
