Improve pane color

--- a/tmux.conf
+++ b/tmux.conf
@@ -43,6 +43,22 @@ set-window-option -g window-status-current-fg black
 set-window-option -g window-status-current-bg magenta
 set-window-option -g window-status-current-attr bright
 
+# tmux 2.1+ can selectively color the active pane.
+# http://www.deanbodenham.com/learn/tmux-pane-colours.html
+# https://stackoverflow.com/a/33562182
+# Can use xterm-256 colors or ANSI.
+# https://upload.wikimedia.org/wikipedia/commons/1/15/Xterm_256color_chart.svg
+
+# Set inactive/active window styles.
+# set -g window-style 'fg=colour247,bg=colour236'
+# set -g window-active-style 'fg=colour250,bg=black'
+ 
+# Set the pane border.
+# set -g pane-border-bg black
+set -g pane-border-fg white
+# set -g pane-active-border-bg black
+set -g pane-active-border-fg magenta
+
 
 # screen mode ==================================================================
 # set -g prefix C-a
@@ -71,7 +87,7 @@ set-window-option -g window-status-current-attr bright
 # set -g prefix ^t
 # bind-key ^t last-window
 
-# Use ZSH instead of bash.
+# Set default shell as ZSH instead of bash.
 # set -g default-shell /bin/zsh
 # set -g default-command /bin/zsh
 
