--- a/tmux.conf
+++ b/tmux.conf
@@ -1,9 +1,21 @@
 # http://man.openbsd.org/OpenBSD-current/man1/tmux.1
 # https://github.com/claytron/dotfiles/blob/master/.tmux.conf
 # https://github.com/dariomanesku/.tmux/blob/master/.tmux.conf
+# https://www.hamvocke.com/blog/a-guide-to-customizing-your-tmux-conf/
 
 # Always use UTF-8.
 setw -gq utf8 on
+
+# Remap prefix from 'C-b' to 'C-a'.
+unbind C-b
+set-option -g prefix C-a
+bind-key C-a send-prefix
+
+# Split panes using '|' and '-' instead of '"' and '%'.
+bind | split-window -h
+bind - split-window -v
+unbind '"'
+unbind %
 
 # Set the default terminal.
 # This may be necessary for running emacs/vim inside tmux.
