--- a/tmux.conf
+++ b/tmux.conf
@@ -7,6 +7,7 @@
 setw -gq utf8 on
 
 # Remap prefix from 'C-b' to 'C-a'.
+# This might interfere with bash’s go to beginning of line command.
 unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
