Improve shared tmux config

--- a/tmux.conf
+++ b/tmux.conf
@@ -27,7 +27,13 @@ unbind %
 setw -g mode-keys vi
 
 # Enable mouse mode.
-# setw -g mouse on
+# Note that this can conflict with vim mouse mode.
+setw -g mouse on
+# This has been renamed to simply `mouse` in tmux v2.1.
+# Leaving enabled for old tmux version installed on RedHat.
+setw -g mode-mouse on
+# PuTTY on Windows
+# Hold SHIFT, left-click select text, and right-click to paste.
 
 # Set the indexes to start at 1 instead of 0.
 set -g base-index 1
