Improve tmux config

--- a/tmux.conf
+++ b/tmux.conf
@@ -27,11 +27,9 @@ unbind %
 setw -g mode-keys vi
 
 # Enable mouse mode.
+# Renamed from `mouse-mode` to simply `mouse` in tmux v2.1.
 # Note that this can conflict with vim mouse mode.
 setw -g mouse on
-# This has been renamed to simply `mouse` in tmux v2.1.
-# Leaving enabled for old tmux version installed on RedHat.
-setw -g mode-mouse on
 # PuTTY on Windows
 # Hold SHIFT, left-click select text, and right-click to paste.
 
