--- a/tmux.conf
+++ b/tmux.conf
@@ -29,9 +29,9 @@ setw -g mode-keys vi
 # Enable mouse mode.
 # Renamed from `mouse-mode` to simply `mouse` in tmux v2.1.
 # Note that this can conflict with vim mouse mode.
-setw -g mouse on
 # PuTTY on Windows
 # Hold SHIFT, left-click select text, and right-click to paste.
+# setw -g mouse on
 
 # Set the indexes to start at 1 instead of 0.
 set -g base-index 1
