--- a/tmux.conf
+++ b/tmux.conf
@@ -6,6 +6,9 @@
 # Always use UTF-8.
 setw -gq utf8 on
 
+# This improves vim usage inside tmux.
+set -g default-terminal "screen-256color"
+
 # Remap prefix from 'C-b' to 'C-a'.
 # This might interfere with bash’s go to beginning of line command.
 unbind C-b
@@ -31,7 +34,7 @@ setw -g mode-keys vi
 # Note that this can conflict with vim mouse mode.
 # PuTTY on Windows
 # Hold SHIFT, left-click select text, and right-click to paste.
-# setw -g mouse on
+setw -g mouse on
 
 # Set the indexes to start at 1 instead of 0.
 set -g base-index 1
