Disable mouse mode, since it errors on legacy version

--- a/tmux.conf
+++ b/tmux.conf
@@ -34,7 +34,7 @@ setw -g mode-keys vi
 # Note that this can conflict with vim mouse mode.
 # PuTTY on Windows
 # Hold SHIFT, left-click select text, and right-click to paste.
-setw -g mouse on
+# setw -g mouse on
 
 # Set the indexes to start at 1 instead of 0.
 set -g base-index 1
