--- a/tmux.conf
+++ b/tmux.conf
@@ -8,7 +8,7 @@ setw -gq utf8 on
 
 # This improves vim usage inside tmux.
 # However, this doesn't work right with PuTTY (of course)...
-# set -g default-terminal "screen-256color"
+set -g default-terminal "screen-256color"
 
 # Remap prefix from 'C-b' to 'C-a'.
 # This might interfere with bash’s go to beginning of line command.
