--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,12 @@
 [submodule "vim/pack/dist/start/vim-airline"]
 	path = vim/pack/dist/start/vim-airline
-	url = git@github.com:vim-airline/vim-airline.git
+	url = git@github.com:mjsteinbaugh/vim-airline.git
 [submodule "vim/pack/dist/start/dracula-theme"]
 	path = vim/pack/dist/start/dracula-theme
-	url = git@github.com:dracula/vim.git
+	url = git@github.com:mjsteinbaugh/vim-dracula.git
 [submodule "vim/pack/dist/start/vim-markdown"]
 	path = vim/pack/dist/start/vim-markdown
-	url = git@github.com:plasticboy/vim-markdown.git
+	url = git@github.com:mjsteinbaugh/vim-markdown.git
+[submodule "vim/pack/dist/start/Nvim-R"]
+	path = vim/pack/dist/start/Nvim-R
+	url = git@github.com:mjsteinbaugh/Nvim-R.git
