--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,9 @@
 [submodule "vim/pack/dist/start/Nvim-R"]
 	path = vim/pack/dist/start/Nvim-R
 	url = git@github.com:mjsteinbaugh/Nvim-R.git
+[submodule "dracula/putty"]
+	path = dracula/putty
+	url = git@github.com:mjsteinbaugh/dracula-putty.git
+[submodule "dracula/powershell"]
+	path = dracula/powershell
+	url = git@github.com:mjsteinbaugh/dracula-powershell.git
