--- a/tmux.conf
+++ b/tmux.conf
@@ -3,31 +3,56 @@
 # set = set-option
 # setw = set-window-option
 #
+# Check tmux environment:
+# > tmux show-environment -g
+#
 # See also:
 # - http://man.openbsd.org/OpenBSD-current/man1/tmux.1
 # - https://github.com/claytron/dotfiles/blob/master/.tmux.conf
+# - https://github.com/lotabout/dotfiles/blob/master/.tmux.conf
 # - https://github.com/dariomanesku/.tmux/blob/master/.tmux.conf
 # - https://www.hamvocke.com/blog/a-guide-to-customizing-your-tmux-conf/
 #
-# This file uses folds in vim:
-# - zR: Open all folds.
-# - zM: Close all folds.
-# - za: Toggle fold at cursor position.
-# - zj: Move down to start of next fold.
+# This file uses folds in vim.
+# https://vim.fandom.com/wiki/Folding
+
+
+
+# Version-specific changes                                                  {{{1
+# ==============================================================================
+
+# See also:
+# - Changelog
+#   https://github.com/tmux/tmux/blob/master/CHANGES
+# - How to write version-specific config
+#   https://stackoverflow.com/questions/35016458
+
+# tmux 2.1+ can selectively color the active pane.
+# Can use xterm-256 colors or ANSI.
+# - http://www.deanbodenham.com/learn/tmux-pane-colours.html
+# - https://stackoverflow.com/a/33562182
+# - https://upload.wikimedia.org/wikipedia/commons/1/15/Xterm_256color_chart.svg
+
+
+
+# Global variables                                                          {{{1
+# ==============================================================================
+run-shell 'tmux setenv -g OS $(uname -s)'
+run-shell 'tmux setenv -g TMUX_VERSION $(tmux -V | cut -d " " -f2)'
 
 
 
 # General tmux settings                                                     {{{1
 # ==============================================================================
 
-# Always use UTF-8.
+# Force tmux to always use UTF-8.
 setw -gq utf8 on
 
 # Set the default terminal.
 # This improves vim/emacs usage inside tmux.
 # https://gist.github.com/limingjie/4975c36d13d0927613e6
-# set -g default-terminal "tmux"
-# set -g default-terminal "xterm-256color"
+# > set -g default-terminal "tmux"
+# > set -g default-terminal "xterm-256color"
 set -g default-terminal "screen-256color"
 
 # Set the delay so that it doesn't interfere with programs like vim.
@@ -79,15 +104,31 @@ if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.4" | bc)" = 1 ]' \
 
 
 
+# Copy mode                                                                 {{{1
+# ==============================================================================
+
+# This config doesn't work well on Windows with PuTTY or PowerShell, so disable.
+
+# > bind-key -T copy-mode-vi Enter send-keys -X copy-pipe "pbcopy" \; display-message 'Text copied to clipboard!'
+# > bind-key -T copy-mode-vi y send-keys -X copy-pipe "pbcopy" \; display-message 'Text copied to clipboard!'
+
+# vim-like copy mode bindings
+# from https://twitter.com/nickmorrott/status/928343075646210050?s=09
+# > bind -T copy-mode-vi v send-keys -X begin-selection
+# > bind -T copy-mode-vi V send-keys -X select-line
+# > bind -T copy-mode-vi C-v send-keys -X rectangle-toggle \; send-keys -X begin-selection
+# > bind -T copy-mode-vi Escape send-keys -X cancel
+
+
+
 # Mouse mode                                                                {{{1
 # ==============================================================================
 
 # Renamed from `mouse-mode` to simply `mouse` in tmux v2.1.
 # Note that this can conflict with vim mouse mode.
 
-# PuTTY on Windows
+# PuTTY and PowerShell on Windows:
 # Hold SHIFT, left-click select text, and right-click to paste.
-# setw -g mouse on
 
 # < 2.1
 if-shell -b '[ "$(echo "$TMUX_VERSION < 2.1" | bc)" = 1 ]' \
@@ -104,6 +145,15 @@ if-shell -b '[ "$(echo "$TMUX_VERSION < 2.2" | bc)" = 1 ]' \
      set -g status-utf8 on; \
      set -g mouse-utf8 on"
 
+# Don't mark the window on right click.
+# > unbind -T root MouseDown3Pane
+# > bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
+# > bind -n WheelDownPane select-pane -t= \; send-keys -M
+
+# Default is to copy and cancel selection.
+# This copies to the clipboard and leaves the selection instead.
+# > bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe "pbcopy" \; display-message 'text copied to clipboard!'
+
 
 
 # Status bar                                                                {{{1
@@ -117,15 +167,33 @@ set -g status-bg black
 # Windows                                                                   {{{1
 # ==============================================================================
 
+# Don't hold the size of the smallest client bounds.
+setw -g aggressive-resize on
+
+# Notify if other windows have activity.
+set -g visual-activity on
+setw -g monitor-activity on
+
 # Set inactive/active window styles.
 # These are useful sometimes but can be distracting.
-# set -g window-style 'fg=colour247,bg=colour236'
-# set -g window-active-style 'fg=colour250,bg=black'
+# > set -g window-style 'fg=colour247,bg=colour236'
+# > set -g window-active-style 'fg=colour250,bg=black'
 
-# Window status.
+# Set window status aesthetics.
 # < 2.9: The individual -fg, -bg and -attr options have been removed; they were
 # superseded by -style options in tmux 1.9.
 if-shell -b '[ "$(echo "$TMUX_VERSION < 2.9" | bc)" = 1 ]' \
+    "setw -g window-status-fg white \
+     setw -g window-status-bg black \
+     setw -g window-status-attr dim \
+     setw -g window-status-current-fg black \
+     setw -g window-status-current-bg magenta \
+     setw -g window-status-current-attr bright \
+     set -g pane-border-bg black \
+     set -g pane-border-fg white \
+     set -g pane-active-border-bg black \
+     set -g pane-active-border-fg magenta"
+if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.9" | bc)" = 1 ]' \
     "setw -g window-status-fg white \
      setw -g window-status-bg black \
      setw -g window-status-attr dim \
@@ -142,50 +210,26 @@ if-shell -b '[ "$(echo "$TMUX_VERSION < 2.9" | bc)" = 1 ]' \
 # Experimental                                                              {{{1
 # ==============================================================================
 
-# Don't hold the size of the smallest client bounds.
-# setw -g aggressive-resize on
+# Set default shell as ZSH instead of bash.
+# > set -g default-shell /usr/local/bin/zsh
+# > set -g default-command /usr/local/bin/zsh
 
 # Allow renaming of window title.
-# setw -g automatic-rename on
+# > setw -g automatic-rename on
 
 # Set titles.
-# set -g set-titles on
-# set -g set-titles-string '#W' #T
-
-# Notify if other windows have activity.
-# setw -g monitor-activity on
-# set -g visual-activity on
+# > set -g set-titles on
+# > set -g set-titles-string '#W' #T
 
 # Set default directory path.
-# set-option default-path "$PWD"
+# > set-option default-path "$PWD"
 
 # Set screen-like prefix.
-# set -g prefix ^t
-# bind-key ^t last-window
-
-# Set default shell as ZSH instead of bash.
-# set -g default-shell /bin/zsh
-# set -g default-command /bin/zsh
+# > set -g prefix ^t
+# > bind-key ^t last-window
 
 # Don't erase terminal contents on editor exit.
-# setw -g alternate-screen on
-
-
-
-# Version-specific notes                                                    {{{1
-# ==============================================================================
-
-# See also:
-# - Changelog
-#   https://github.com/tmux/tmux/blob/master/CHANGES
-# - How to write version-specific config
-#   https://stackoverflow.com/questions/35016458
-
-# tmux 2.1+ can selectively color the active pane.
-# Can use xterm-256 colors or ANSI.
-# - http://www.deanbodenham.com/learn/tmux-pane-colours.html
-# - https://stackoverflow.com/a/33562182
-# - https://upload.wikimedia.org/wikipedia/commons/1/15/Xterm_256color_chart.svg
+# > setw -g alternate-screen on
 
 
 
