--- a/tmux.conf
+++ b/tmux.conf
@@ -26,6 +26,8 @@
 #   https://github.com/tmux/tmux/blob/master/CHANGES
 # - How to write version-specific config
 #   https://stackoverflow.com/questions/35016458
+# - Improved detection method using awk
+#   https://stackoverflow.com/a/41392083/3911732
 
 # tmux 2.1+ can selectively color the active pane.
 # Can use xterm-256 colors or ANSI.
@@ -37,8 +39,10 @@
 
 # Global variables                                                          {{{1
 # ==============================================================================
-run-shell 'tmux setenv -g OS $(uname -s)'
-run-shell 'tmux setenv -g TMUX_VERSION $(tmux -V | cut -d " " -f2)'
+
+# Passthrough to if-shell doesn't seem to be working for me with v2.9a.
+# > run-shell 'tmux setenv -g OSNAME $(uname -s)'
+# > run-shell 'tmux setenv -g TMUX_VERSION $(tmux -V | cut -d " " -f2)'
 
 
 
@@ -90,17 +94,15 @@ setw -g pane-base-index 1
 
 # Change bind keys.
 # < 2.4: bind-key syntax changed in 2.4.
-if-shell -b '[ "$(echo "$TMUX_VERSION < 2.4" | bc)" = 1 ]' \
+if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.4" | bc)" -eq 1 ]' \
+    "bind-key -T copy-mode-vi v   send -X begin-selection; \
+     bind-key -T copy-mode-vi V   send -X select-line; \
+     bind-key -T copy-mode-vi C-v send -X rectangle-toggle; \
+     bind-key -T copy-mode-vi y   send -X copy-pipe-and-cancel 'xclip -selection clipboard -in'" \
     "bind-key -t vi-copy v   begin-selection; \
      bind-key -t vi-copy V   select-line; \
      bind-key -t vi-copy C-v rectangle-toggle; \
      bind-key -t vi-copy y   copy-pipe 'xclip -selection clipboard -in'"
-# >= 2.4
-if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.4" | bc)" = 1 ]' \
-    "bind-key -T copy-mode-vi v   send -X begin-selection; \
-     bind-key -T copy-mode-vi V   send -X select-line; \
-     bind-key -T copy-mode-vi C-v send -X rectangle-toggle; \
-     bind-key -T copy-mode-vi y   send -X copy-pipe-and-cancel 'xclip -selection clipboard -in'"
 
 
 
@@ -131,16 +133,16 @@ if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.4" | bc)" = 1 ]' \
 # Hold SHIFT, left-click select text, and right-click to paste.
 
 # < 2.1
-if-shell -b '[ "$(echo "$TMUX_VERSION < 2.1" | bc)" = 1 ]' \
+if-shell -b '[ "$(echo "$TMUX_VERSION < 2.1" | bc)" -eq 1 ]' \
     "set -g mouse-select-pane on; \
      set -g mode-mouse on; \
      set -g mouse-resize-pane on; \
      set -g mouse-select-window on"
 # >= 2.1: "mouse" replaced the previous 4 mouse options.
-if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.1" | bc)" = 1 ]' \
+if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.1" | bc)" -eq 1 ]' \
     "set -g mouse on"
 # 2.2+: UTF-8 is autodetected, but errors if explicitly set.
-if-shell -b '[ "$(echo "$TMUX_VERSION < 2.2" | bc)" = 1 ]' \
+if-shell -b '[ "$(echo "$TMUX_VERSION < 2.2" | bc)" -eq 1 ]' \
     "set -g utf8 on; \
      set -g status-utf8 on; \
      set -g mouse-utf8 on"
@@ -162,6 +164,10 @@ if-shell -b '[ "$(echo "$TMUX_VERSION < 2.2" | bc)" = 1 ]' \
 set -g status-fg white
 set -g status-bg black
 
+if-shell "tmux -V | awk '{exit !($2 >= \"2.1\")}'" \
+    'set -g status-fg white' \
+    'set -g status-fg black'
+
 
 
 # Windows                                                                   {{{1
@@ -182,7 +188,17 @@ setw -g monitor-activity on
 # Set window status aesthetics.
 # < 2.9: The individual -fg, -bg and -attr options have been removed; they were
 # superseded by -style options in tmux 1.9.
-if-shell -b '[ "$(echo "$TMUX_VERSION < 2.9" | bc)" = 1 ]' \
+if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.9" | bc)" -eq 1 ]' \
+    "setw -g window-status-fg white \
+     setw -g window-status-bg black \
+     setw -g window-status-attr dim \
+     setw -g window-status-current-fg black \
+     setw -g window-status-current-bg magenta \
+     setw -g window-status-current-attr bright \
+     set -g pane-border-bg black \
+     set -g pane-border-fg white \
+     set -g pane-active-border-bg black \
+     set -g pane-active-border-fg magenta" \
     "setw -g window-status-fg white \
      setw -g window-status-bg black \
      setw -g window-status-attr dim \
@@ -193,17 +209,7 @@ if-shell -b '[ "$(echo "$TMUX_VERSION < 2.9" | bc)" = 1 ]' \
      set -g pane-border-fg white \
      set -g pane-active-border-bg black \
      set -g pane-active-border-fg magenta"
-if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.9" | bc)" = 1 ]' \
-    "setw -g window-status-fg white \
-     setw -g window-status-bg black \
-     setw -g window-status-attr dim \
-     setw -g window-status-current-fg black \
-     setw -g window-status-current-bg magenta \
-     setw -g window-status-current-attr bright \
-     set -g pane-border-bg black \
-     set -g pane-border-fg white \
-     set -g pane-active-border-bg black \
-     set -g pane-active-border-fg magenta"
+
 
 
 
