Update version specific method, using awk

--- a/tmux.conf
+++ b/tmux.conf
@@ -168,6 +168,11 @@ if-shell "tmux -V | awk '{exit !($2 >= \"2.1\")}'" \
     'set -g status-fg white' \
     'set -g status-fg black'
 
+if-shell "uname -s | awk '{exit !($1 == \"Darwin\")}'" \
+    'set -g status-fg red' \
+    'set -g status-fg black'
+
+
 
 
 # Windows                                                                   {{{1
