Update tmux config

--- a/tmux.conf
+++ b/tmux.conf
@@ -28,8 +28,11 @@
 #   https://stackoverflow.com/questions/35016458
 # - Improved detection method using awk
 #   https://stackoverflow.com/a/41392083/3911732
+# - 2.9 changes
+#   https://github.com/tmux/tmux/issues/1689
+#   https://github.com/tmux/tmux/wiki/FAQ
 
-# tmux 2.1+ can selectively color the active pane.
+# tmux 2.1+ can selectively color the activities pane.
 # Can use xterm-256 colors or ANSI.
 # - http://www.deanbodenham.com/learn/tmux-pane-colours.html
 # - https://stackoverflow.com/a/33562182
@@ -40,7 +43,7 @@
 # Global variables                                                          {{{1
 # ==============================================================================
 
-# Passthrough to if-shell doesn't seem to be working for me with v2.9a.
+# Passthrough to `if-shell` doesn't seem to be working for me with v2.9.
 # > run-shell 'tmux setenv -g OSNAME $(uname -s)'
 # > run-shell 'tmux setenv -g TMUX_VERSION $(tmux -V | cut -d " " -f2)'
 
@@ -67,25 +70,25 @@ set -g history-limit 200000
 
 
 
-# Bindings                                                                  {{{1
+# Key bindings                                                              {{{1
 # ==============================================================================
+
+# Use vi key bindings.
+setw -g mode-keys vi
 
 # Remap prefix from 'C-b' to 'C-a'.
 # Matches the conventions used in screen.
 # This might interfere with bash's go to beginning of line command.
 set-option -g prefix C-a
 unbind C-b
-# Allow for C-a C-a to send it to the application.
+# Allow for `C-a C-a` to send it to the application.
 bind-key C-a send-prefix
 
-# Split panes using '|' and '-' instead of '"' and '%'.
+# Intuiatively split panes using `|` and `-` instead of `"` and `%`.
 bind | split-window -h
 bind - split-window -v
 unbind '"'
 unbind %
-
-# Use vi key bindings.
-setw -g mode-keys vi
 
 # Make window and pane indexes start with 1.
 # Zero-indexing is confusing.
@@ -94,32 +97,31 @@ setw -g pane-base-index 1
 
 # Change bind keys.
 # < 2.4: bind-key syntax changed in 2.4.
-if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.4" | bc)" -eq 1 ]' \
+if-shell "tmux -V | awk '{exit !($2 >= \"2.4\")}'" \
     "bind-key -T copy-mode-vi v   send -X begin-selection; \
      bind-key -T copy-mode-vi V   send -X select-line; \
      bind-key -T copy-mode-vi C-v send -X rectangle-toggle; \
      bind-key -T copy-mode-vi y   send -X copy-pipe-and-cancel 'xclip -selection clipboard -in'" \
-    "bind-key -t vi-copy v   begin-selection; \
-     bind-key -t vi-copy V   select-line; \
-     bind-key -t vi-copy C-v rectangle-toggle; \
-     bind-key -t vi-copy y   copy-pipe 'xclip -selection clipboard -in'"
+    "bind-key -t vi-copy      v           begin-selection; \
+     bind-key -t vi-copy      V           select-line; \
+     bind-key -t vi-copy      C-v         rectangle-toggle; \
+     bind-key -t vi-copy      y           copy-pipe 'xclip -selection clipboard -in'"
 
 
 
 # Copy mode                                                                 {{{1
 # ==============================================================================
 
-# This config doesn't work well on Windows with PuTTY or PowerShell, so disable.
-
-# > bind-key -T copy-mode-vi Enter send-keys -X copy-pipe "pbcopy" \; display-message 'Text copied to clipboard!'
-# > bind-key -T copy-mode-vi y send-keys -X copy-pipe "pbcopy" \; display-message 'Text copied to clipboard!'
-
-# vim-like copy mode bindings
-# from https://twitter.com/nickmorrott/status/928343075646210050?s=09
-# > bind -T copy-mode-vi v send-keys -X begin-selection
-# > bind -T copy-mode-vi V send-keys -X select-line
-# > bind -T copy-mode-vi C-v send-keys -X rectangle-toggle \; send-keys -X begin-selection
-# > bind -T copy-mode-vi Escape send-keys -X cancel
+# This config doesn't work well on Windows with PuTTY or PowerShell.
+# Keeping the advanced copy mode macOS-specific for the time being.
+# vim-like copy mode bindings are from https://twitter.com/nickmorrott/status/928343075646210050?s=09
+if-shell "uname -s | awk '{exit !($1 == \"Darwin\")}'" \
+    'bind-key -T copy-mode-vi Enter   send-keys -X copy-pipe "pbcopy" \; display-message "Text copied to clipboard"; \
+     bind-key -T copy-mode-vi y       send-keys -X copy-pipe "pbcopy" \; display-message "Text copied to clipboard"; \
+     bind -T     copy-mode-vi v       send-keys -X begin-selection; \
+     bind -T     copy-mode-vi V       send-keys -X select-line; \
+     bind -T     copy-mode-vi C-v     send-keys -X rectangle-toggle \; send-keys -X begin-selection; \
+     bind -T     copy-mode-vi Escape  send-keys -X cancel'
 
 
 
@@ -132,51 +134,27 @@ if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.4" | bc)" -eq 1 ]' \
 # PuTTY and PowerShell on Windows:
 # Hold SHIFT, left-click select text, and right-click to paste.
 
-# < 2.1
-if-shell -b '[ "$(echo "$TMUX_VERSION < 2.1" | bc)" -eq 1 ]' \
+# >= 2.1: "mouse" replaced the previous 4 mouse options.
+if-shell "tmux -V | awk '{exit !($2 >= \"2.1\")}'" \
+    "set -g mouse on" \
     "set -g mouse-select-pane on; \
      set -g mode-mouse on; \
      set -g mouse-resize-pane on; \
      set -g mouse-select-window on"
-# >= 2.1: "mouse" replaced the previous 4 mouse options.
-if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.1" | bc)" -eq 1 ]' \
-    "set -g mouse on"
 # 2.2+: UTF-8 is autodetected, but errors if explicitly set.
-if-shell -b '[ "$(echo "$TMUX_VERSION < 2.2" | bc)" -eq 1 ]' \
+if-shell "tmux -V | awk '{exit !($2 < \"2.2\")}'" \
     "set -g utf8 on; \
      set -g status-utf8 on; \
      set -g mouse-utf8 on"
 
-# Don't mark the window on right click.
-# > unbind -T root MouseDown3Pane
-# > bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
-# > bind -n WheelDownPane select-pane -t= \; send-keys -M
-
-# Default is to copy and cancel selection.
-# This copies to the clipboard and leaves the selection instead.
-# > bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe "pbcopy" \; display-message 'text copied to clipboard!'
 
 
-
-# Status bar                                                                {{{1
+# Windows and status bar                                                    {{{1
 # ==============================================================================
 
-set -g status-fg white
-set -g status-bg black
-
-if-shell "tmux -V | awk '{exit !($2 >= \"2.1\")}'" \
-    'set -g status-fg white' \
-    'set -g status-fg black'
-
-if-shell "uname -s | awk '{exit !($1 == \"Darwin\")}'" \
-    'set -g status-fg red' \
-    'set -g status-fg black'
-
-
-
-
-# Windows                                                                   {{{1
-# ==============================================================================
+# Note that windows can be selectively colored using `window-style` and
+# `window-active-style`. This can be useful, but I find it too distracting
+# to use regularly.
 
 # Don't hold the size of the smallest client bounds.
 setw -g aggressive-resize on
@@ -185,62 +163,14 @@ setw -g aggressive-resize on
 set -g visual-activity on
 setw -g monitor-activity on
 
-# Set inactive/active window styles.
-# These are useful sometimes but can be distracting.
-# > set -g window-style 'fg=colour247,bg=colour236'
-# > set -g window-active-style 'fg=colour250,bg=black'
+# Set window and status bar aesthetics.
+set -g status-style "fg=white,bg=black"
 
-# Set window status aesthetics.
-# < 2.9: The individual -fg, -bg and -attr options have been removed; they were
-# superseded by -style options in tmux 1.9.
-if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.9" | bc)" -eq 1 ]' \
-    "setw -g window-status-fg white \
-     setw -g window-status-bg black \
-     setw -g window-status-attr dim \
-     setw -g window-status-current-fg black \
-     setw -g window-status-current-bg magenta \
-     setw -g window-status-current-attr bright \
-     set -g pane-border-bg black \
-     set -g pane-border-fg white \
-     set -g pane-active-border-bg black \
-     set -g pane-active-border-fg magenta" \
-    "setw -g window-status-fg white \
-     setw -g window-status-bg black \
-     setw -g window-status-attr dim \
-     setw -g window-status-current-fg black \
-     setw -g window-status-current-bg magenta \
-     setw -g window-status-current-attr bright \
-     set -g pane-border-bg black \
-     set -g pane-border-fg white \
-     set -g pane-active-border-bg black \
-     set -g pane-active-border-fg magenta"
+set -g pane-border-style "fg=white,bg=black"
+set -g pane-active-border-style "fg=magenta,bg=black"
 
-
-
-
-# Experimental                                                              {{{1
-# ==============================================================================
-
-# Set default shell as ZSH instead of bash.
-# > set -g default-shell /usr/local/bin/zsh
-# > set -g default-command /usr/local/bin/zsh
-
-# Allow renaming of window title.
-# > setw -g automatic-rename on
-
-# Set titles.
-# > set -g set-titles on
-# > set -g set-titles-string '#W' #T
-
-# Set default directory path.
-# > set-option default-path "$PWD"
-
-# Set screen-like prefix.
-# > set -g prefix ^t
-# > bind-key ^t last-window
-
-# Don't erase terminal contents on editor exit.
-# > setw -g alternate-screen on
+setw -g window-status-style "fg=white,bg=black,dim"
+setw -g window-status-current-style "fg=black,bg=magenta,bright"
 
 
 
