--- a/tmux.conf
+++ b/tmux.conf
@@ -109,19 +109,28 @@ if-shell "tmux -V | awk '{exit !($2 >= \"2.4\")}'" \
 
 
 
-# Copy mode                                                                 {{{1
+# Windows and status bar                                                    {{{1
 # ==============================================================================
 
-# This config doesn't work well on Windows with PuTTY or PowerShell.
-# Keeping the advanced copy mode macOS-specific for the time being.
-# vim-like copy mode bindings are from https://twitter.com/nickmorrott/status/928343075646210050?s=09
-if-shell "uname -s | awk '{exit !($1 == \"Darwin\")}'" \
-    'bind-key -T copy-mode-vi Enter   send-keys -X copy-pipe "pbcopy" \; display-message "Text copied to clipboard"; \
-     bind-key -T copy-mode-vi y       send-keys -X copy-pipe "pbcopy" \; display-message "Text copied to clipboard"; \
-     bind -T     copy-mode-vi v       send-keys -X begin-selection; \
-     bind -T     copy-mode-vi V       send-keys -X select-line; \
-     bind -T     copy-mode-vi C-v     send-keys -X rectangle-toggle \; send-keys -X begin-selection; \
-     bind -T     copy-mode-vi Escape  send-keys -X cancel'
+# Note that windows can be selectively colored using `window-style` and
+# `window-active-style`. This can be useful, but I find it too distracting
+# to use regularly.
+
+# Don't hold the size of the smallest client bounds.
+setw -g aggressive-resize on
+
+# Notify if other windows have activity.
+set -g visual-activity on
+setw -g monitor-activity on
+
+# Set window and status bar aesthetics.
+set -g status-style "fg=white,bg=black"
+
+set -g pane-border-style "fg=white,bg=black"
+set -g pane-active-border-style "fg=magenta,bg=black"
+
+setw -g window-status-style "fg=white,bg=black,dim"
+setw -g window-status-current-style "fg=white,bg=magenta,bright"
 
 
 
@@ -149,28 +158,19 @@ if-shell "tmux -V | awk '{exit !($2 < \"2.2\")}'" \
 
 
 
-# Windows and status bar                                                    {{{1
+# Copy mode                                                                 {{{1
 # ==============================================================================
 
-# Note that windows can be selectively colored using `window-style` and
-# `window-active-style`. This can be useful, but I find it too distracting
-# to use regularly.
-
-# Don't hold the size of the smallest client bounds.
-setw -g aggressive-resize on
-
-# Notify if other windows have activity.
-set -g visual-activity on
-setw -g monitor-activity on
-
-# Set window and status bar aesthetics.
-set -g status-style "fg=white,bg=black"
-
-set -g pane-border-style "fg=white,bg=black"
-set -g pane-active-border-style "fg=magenta,bg=black"
-
-setw -g window-status-style "fg=white,bg=black,dim"
-setw -g window-status-current-style "fg=black,bg=magenta,bright"
+# This config doesn't work well on Windows with PuTTY or PowerShell.
+# Keeping the advanced copy mode macOS-specific for the time being.
+# vim-like copy mode bindings are from https://twitter.com/nickmorrott/status/928343075646210050?s=09
+if-shell "uname -s | awk '{exit !($1 == \"Darwin\")}'" \
+    'bind-key -T copy-mode-vi Enter   send-keys -X copy-pipe "pbcopy" \; display-message "Text copied to clipboard"; \
+     bind-key -T copy-mode-vi y       send-keys -X copy-pipe "pbcopy" \; display-message "Text copied to clipboard"; \
+     bind -T     copy-mode-vi v       send-keys -X begin-selection; \
+     bind -T     copy-mode-vi V       send-keys -X select-line; \
+     bind -T     copy-mode-vi C-v     send-keys -X rectangle-toggle \; send-keys -X begin-selection; \
+     bind -T     copy-mode-vi Escape  send-keys -X cancel'
 
 
 
