--- a/tmux.conf
+++ b/tmux.conf
@@ -130,7 +130,7 @@ set -g pane-border-style "fg=white,bg=black"
 set -g pane-active-border-style "fg=magenta,bg=black"
 
 setw -g window-status-style "fg=white,bg=black,dim"
-setw -g window-status-current-style "fg=white,bg=magenta,bright"
+# > setw -g window-status-current-style "fg=white,bg=magenta,bright"
 
 
 
