Simplify tmux config

--- a/tmux.conf
+++ b/tmux.conf
@@ -124,13 +124,11 @@ set -g visual-activity on
 setw -g monitor-activity on
 
 # Set window and status bar aesthetics.
-set -g status-style "fg=white,bg=black"
-
-set -g pane-border-style "fg=white,bg=black"
-set -g pane-active-border-style "fg=magenta,bg=black"
-
-setw -g window-status-style "fg=white,bg=black,dim"
-# > setw -g window-status-current-style "fg=white,bg=magenta,bright"
+set  -g status-style                "fg=white,bg=black"
+set  -g pane-border-style           "fg=white,bg=black"
+set  -g pane-active-border-style    "fg=magenta,bg=black"
+setw -g window-status-style         "fg=white,bg=black,dim"
+setw -g window-status-current-style "fg=white,bg=black,bright"
 
 
 
