--- a/.gitmodules
+++ b/.gitmodules
@@ -1,18 +1,18 @@
 [submodule "vim/pack/dist/start/vim-airline"]
 	path = vim/pack/dist/start/vim-airline
-	url = git@github.com:mjsteinbaugh/vim-airline.git
+	url = https://github.com:mjsteinbaugh/vim-airline.git
 [submodule "vim/pack/dist/start/dracula-theme"]
 	path = vim/pack/dist/start/dracula-theme
-	url = git@github.com:mjsteinbaugh/vim-dracula.git
+	url = https://github.com:mjsteinbaugh/vim-dracula.git
 [submodule "vim/pack/dist/start/vim-markdown"]
 	path = vim/pack/dist/start/vim-markdown
-	url = git@github.com:mjsteinbaugh/vim-markdown.git
+	url = https://github.com:mjsteinbaugh/vim-markdown.git
 [submodule "vim/pack/dist/start/Nvim-R"]
 	path = vim/pack/dist/start/Nvim-R
-	url = git@github.com:mjsteinbaugh/Nvim-R.git
+	url = https://github.com:mjsteinbaugh/Nvim-R.git
 [submodule "dracula/putty"]
 	path = dracula/putty
-	url = git@github.com:mjsteinbaugh/dracula-putty.git
+	url = https://github.com:mjsteinbaugh/dracula-putty.git
 [submodule "dracula/powershell"]
 	path = dracula/powershell
-	url = git@github.com:mjsteinbaugh/dracula-powershell.git
+	url = https://github.com:mjsteinbaugh/dracula-powershell.git
